--- a/src/view/main.fxml
+++ b/src/view/main.fxml
@@ -1,5 +1,47 @@
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<GridPane fx:controller="controller.MainController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
+            prefWidth="1280.0" style="-fx-background-color: #0E0B16;" stylesheets="@Main.css"
+            xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <Pane prefHeight="86.0" prefWidth="188.0" style="-fx-background-color: #4717F6;">
+        <Label fx:id="lbLogo" layoutX="22.0" layoutY="21.0" prefHeight="45.0" prefWidth="195.0" styleClass="lbLogo"
+               stylesheets="@Main.css" text="Ocarina"/>
+    </Pane>
+    <Pane layoutX="187.0" prefHeight="86.0" prefWidth="1093.0" style="-fx-background-color: #663CFD;">
+        <Button fx:id="btnLogin" layoutX="937.0" layoutY="26.0" mnemonicParsing="false" prefHeight="34.0"
+                prefWidth="120.0" styleClass="btnLogin" stylesheets="@Main.css" text="Login" textFill="WHITE">
+            <font>
+                <Font name="Nirmala UI" size="12.0"/>
+            </font>
+        </Button>
+    </Pane>
+    <Label fx:id="lbWelcome" layoutX="46.0" layoutY="238.0" styleClass="lbWelcome" stylesheets="@Main.css"
+           text="Welcome Back"/>
+    <Label fx:id="lbApresentacao" layoutX="57.0" layoutY="347.0" styleClass="lbTextoBoasVindas"
+           text="TUDO SOBRE SEUS FILMES PREFERIDOS"/>
+    <Label fx:id="lbServicos" layoutX="57.0" layoutY="391.0" styleClass="lbTextoBoasVindas"
+           text="AVALIAÇÕES, SINOPSES E MUITO MAIS"/>
+    <Line fx:id="lineWelcome" endX="4.0" layoutX="205.0" layoutY="328.0" startX="-148.0" stroke="#4717f6"
+          strokeWidth="3.0"/>
+    <Button fx:id="btnRegister" layoutX="57.0" layoutY="453.0" mnemonicParsing="false" prefHeight="54.0"
+            prefWidth="202.0" styleClass="btnRegister" text="Registrar-se" textFill="WHITE"/>
+    <Line endX="-100.0" endY="181.0" layoutX="1301.0" layoutY="309.0" startX="-100.0" startY="-80.0" stroke="#4717f6"
+          strokeWidth="3.0"/>
+    <Circle fill="#4717f6" layoutX="1201.0" layoutY="283.0" radius="7.0" stroke="#4717f6" strokeType="INSIDE"/>
+    <Circle fill="#4717f6" layoutX="1201.0" layoutY="359.0" radius="7.0" stroke="#4717f6" strokeType="INSIDE"/>
+    <Circle fill="#4717f6" layoutX="1201.0" layoutY="435.0" radius="7.0" stroke="#4717f6" strokeType="INSIDE"/>
+    <ImageView fitHeight="72.0" fitWidth="72.0" layoutX="514.0" layoutY="247.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@resources/logo.png"/>
+    </ImageView>
+</AnchorPane>
