--- a/src/view/register/register.fxml
+++ b/src/view/register/register.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #0A002C;" stylesheets="@Register.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.register.RegisterController">
    <children>
-      <Pane prefHeight="720.0" prefWidth="838.0" style="-fx-background-color: white;">
+      <Pane layoutX="-22.0" prefHeight="720.0" prefWidth="838.0" style="-fx-background-color: white;">
          <children>
             <JFXButton fx:id="btnCadastrar" layoutX="170.0" layoutY="614.0" onAction="#onClick" prefHeight="54.0" prefWidth="499.0" stylesheets="@Register.css" text="Cadastrar" textFill="WHITE">
                <font>
