--- a/src/view/login/login.fxml
+++ b/src/view/login/login.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,45 +10,45 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0a002c" height="720.0" stroke="BLACK" strokeType="INSIDE" width="722.0" />
-      <ImageView fitHeight="720.0" fitWidth="722.0">
+      <Rectangle fx:id="rectBackground" arcHeight="5.0" arcWidth="5.0" fill="#0a002c" height="720.0" stroke="BLACK" strokeType="INSIDE" width="722.0" />
+      <ImageView fx:id="imgWaves" fitHeight="720.0" fitWidth="722.0">
          <image>
             <Image url="@../resources/waves.png" />
          </image>
       </ImageView>
-      <Text fill="#663cfd" layoutX="940.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login" wrappingWidth="145.443359375">
+      <Text fx:id="txtLogin" fill="#663cfd" layoutX="940.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login" wrappingWidth="127.443359375">
          <font>
             <Font name="System Bold" size="48.0" />
          </font>
       </Text>
-      <JFXTextField focusColor="#663cfd" labelFloat="true" layoutX="833.0" layoutY="270.0" prefHeight="25.0" prefWidth="356.0" promptText="usuário" unFocusColor="#663cfd">
+      <JFXTextField fx:id="txtfEmail" focusColor="#663cfd" layoutX="835.0" layoutY="222.0" prefHeight="25.0" prefWidth="390.0" promptText="Email" unFocusColor="#663cfd">
          <font>
             <Font size="24.0" />
          </font>
       </JFXTextField>
-      <ImageView layoutX="18.0" layoutY="18.0">
-         <image>
-            <Image url="@../resources/O.png" />
-         </image>
-      </ImageView>
-      <JFXPasswordField focusColor="#663cfd" labelFloat="true" layoutX="833.0" layoutY="381.0" prefHeight="25.0" prefWidth="356.0" promptText="senha" unFocusColor="#663cfd">
+      <JFXPasswordField fx:id="pfPass" focusColor="#663cfd" layoutX="835.0" layoutY="354.0" prefHeight="25.0" prefWidth="390.0" promptText="Password" unFocusColor="#663cfd">
          <font>
             <Font size="24.0" />
          </font>
       </JFXPasswordField>
-      <JFXButton layoutX="833.0" layoutY="542.0" prefHeight="39.0" prefWidth="356.0" style="-fx-background-color: #663cfd;" text="Log in" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </JFXButton>
-      <JFXButton fx:id="btnLogo" layoutX="15.0" layoutY="11.0" onAction="#home" opacity="0.0" prefHeight="64.0" prefWidth="49.0" text=" " />
-      <AnchorPane layoutX="609.0" layoutY="184.0" />
-      <Text fill="WHITE" layoutX="291.0" layoutY="350.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Faça login para continuar">
+      <Text fx:id="txtLoginToContinue" fill="WHITE" layoutX="85.0" layoutY="367.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Faça login para continuar">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
+      <Button fx:id="btnBack" layoutX="29.0" layoutY="14.0" mnemonicParsing="false" onAction="#backHome" prefHeight="40.0" prefWidth="40.0" />
+      <Button fx:id="btnLogin" layoutX="971.0" layoutY="497.0" mnemonicParsing="false" onAction="#makeLogin" prefHeight="85.0" prefWidth="85.0" />
+      <ImageView fx:id="imgUser" fitHeight="49.0" fitWidth="49.0" layoutX="755.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resources/user.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imgPass" fitHeight="49.0" fitWidth="49.0" layoutX="755.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resources/pass.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
