--- a/src/view/login/login.fxml
+++ b/src/view/login/login.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXPasswordField?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
    <children>
       <Rectangle fx:id="rectBackground" arcHeight="5.0" arcWidth="5.0" fill="#0a002c" height="720.0" stroke="BLACK" strokeType="INSIDE" width="722.0" />
       <ImageView fx:id="imgWaves" fitHeight="720.0" fitWidth="722.0">
@@ -23,12 +20,12 @@
             <Font name="System Bold" size="48.0" />
          </font>
       </Text>
-      <JFXTextField fx:id="txtfEmail" focusColor="#663cfd" layoutX="835.0" layoutY="222.0" prefHeight="25.0" prefWidth="390.0" promptText="Email" unFocusColor="#663cfd">
+      <JFXTextField fx:id="txtfEmail" focusColor="#663cfd" labelFloat="true" layoutX="835.0" layoutY="222.0" prefHeight="25.0" prefWidth="390.0" promptText="Email" unFocusColor="#663cfd">
          <font>
             <Font size="24.0" />
          </font>
       </JFXTextField>
-      <JFXPasswordField fx:id="pfPass" focusColor="#663cfd" layoutX="835.0" layoutY="354.0" prefHeight="25.0" prefWidth="390.0" promptText="Password" unFocusColor="#663cfd">
+      <JFXPasswordField fx:id="pfPass" focusColor="#663cfd" labelFloat="true" layoutX="835.0" layoutY="354.0" prefHeight="25.0" prefWidth="390.0" promptText="Password" unFocusColor="#663cfd">
          <font>
             <Font size="24.0" />
          </font>
