--- a/src/view/home/home.fxml
+++ b/src/view/home/home.fxml
@@ -1,16 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #0A002C;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.home.HomeController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #0A002C;" stylesheets="@Home.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.home.HomeController">
    <children>
-      <Label fx:id="lbUsernameTop" layoutX="37.0" layoutY="22.0" text="Label" textFill="WHITE">
+      <Label fx:id="lbUsername" layoutX="727.0" layoutY="146.0" text="Label" textFill="WHITE">
          <font>
-            <Font size="24.0" />
+            <Font size="45.0" />
          </font>
       </Label>
+      <Label fx:id="lbWelcomeAgain" layoutX="399.0" layoutY="146.0" text="Welcome again, " textFill="WHITE">
+         <font>
+            <Font size="45.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnHome" layoutX="560.0" layoutY="309.0" mnemonicParsing="false" prefHeight="160.0" prefWidth="160.0" />
+      <ImageView fx:id="imgLogo" fitHeight="48.0" fitWidth="57.0" layoutX="64.0" layoutY="635.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resources/logo.png" />
+         </image>
+      </ImageView>
+      <Line fx:id="lineLogo" endX="-100.0" endY="71.0" layoutX="230.0" layoutY="623.0" startX="-100.0" stroke="#4717f6" strokeWidth="5.0" />
+      <Label fx:id="lbLogo" layoutX="157.0" layoutY="629.0" text="Ocarina" textFill="WHITE">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Label>
+      <JFXButton fx:id="btnQuit" alignment="CENTER_RIGHT" layoutX="1190.0" layoutY="665.0" onAction="#backLogin" prefHeight="28.0" prefWidth="63.0" text="Sair" textAlignment="RIGHT" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="btnChangeUser" alignment="CENTER_RIGHT" layoutX="37.0" layoutY="20.0" prefHeight="28.0" prefWidth="114.0" text="Alterar Perfil" textAlignment="RIGHT" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
