--- a/src/view/login/login.fxml
+++ b/src/view/login/login.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
    <children>
       <Rectangle fx:id="rectBackground" arcHeight="5.0" arcWidth="5.0" fill="#0a002c" height="720.0" stroke="BLACK" strokeType="INSIDE" width="722.0" />
       <ImageView fx:id="imgWaves" fitHeight="720.0" fitWidth="722.0">
@@ -32,6 +36,7 @@
       </JFXPasswordField>
       <Text fx:id="txtLoginToContinue" fill="WHITE" layoutX="85.0" layoutY="367.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Faça login para continuar">
          <font>
+
             <Font size="24.0" />
          </font>
       </Text>
@@ -47,5 +52,6 @@
             <Image url="@../resources/pass.png" />
          </image>
       </ImageView>
+      <JFXButton fx:id="teste" layoutX="449.0" layoutY="607.0" onAction="#teste" prefHeight="79.0" prefWidth="68.0" text=" " />
    </children>
 </AnchorPane>
