--- a/src/view/adm/adm.fxml
+++ b/src/view/adm/adm.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,27 +11,26 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adm.AdmController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@Adm.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adm.AdmController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0a002c" height="728.0" stroke="BLACK" strokeType="INSIDE" width="1280.0" />
-      <Text fill="#fcfcfc" layoutX="436.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bem vindo, mestre!">
+      <Rectangle fx:id="rctBackgroung" arcHeight="5.0" arcWidth="5.0" fill="#0a002c" focusTraversable="true" height="728.0" stroke="BLACK" strokeType="INSIDE" width="1280.0" />
+      <Text fx:id="txtWelcomeMaster" fill="#fcfcfc" layoutX="436.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bem vindo, Mestre!">
          <font>
-            <Font name="System Bold" size="45.0" />
+            <Font size="45.0" />
          </font>
       </Text>
-      <ImageView layoutX="631.0" layoutY="251.0">
+      <ImageView fx:id="imgLock" layoutX="631.0" layoutY="251.0">
          <image>
             <Image url="@../resources/cadeado_adm.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="537.0" layoutY="301.0" prefHeight="39.0" prefWidth="222.0" text="Listagem de filmes" textFill="WHITE">
+      <JFXButton fx:id="btnListMovies" focusTraversable="false" layoutX="537.0" layoutY="301.0" prefHeight="39.0" prefWidth="222.0" text="Listagem de filmes" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXButton>
-      <Line endX="72.25" layoutX="656.0" layoutY="332.0" startX="-86.0" stroke="#663cfd" />
-      <JFXButton layoutX="538.0" layoutY="366.0" prefHeight="39.0" prefWidth="117.0" text="Adicionar" textFill="WHITE">
+      <Line fx:id="lineListMovies" endX="72.25" layoutX="656.0" layoutY="332.0" startX="-86.0" stroke="#663cfd" />
+      <JFXButton fx:id="btnAddMovies" focusTraversable="false" layoutX="538.0" layoutY="366.0" prefHeight="39.0" prefWidth="117.0" text="Adicionar" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -38,8 +38,8 @@
             <Insets left="25.0" />
          </padding>
       </JFXButton>
-      <Line endX="30.25" layoutX="620.0" layoutY="395.0" startX="-51.5" stroke="#663cfd" />
-      <JFXButton layoutX="535.0" layoutY="429.0" prefHeight="39.0" prefWidth="100.0" text="Alterar " textFill="WHITE">
+      <Line fx:id="lineAddMovies" endX="30.25" layoutX="620.0" layoutY="395.0" startX="-51.5" stroke="#663cfd" />
+      <JFXButton fx:id="btnUpdateMovies" focusTraversable="false" layoutX="535.0" layoutY="429.0" prefHeight="39.0" prefWidth="100.0" text="Alterar " textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -47,8 +47,8 @@
             <Insets right="-34.0" />
          </padding>
       </JFXButton>
-      <Line endX="6.5" layoutX="622.0" layoutY="457.0" startX="-51.5" stroke="#663cfd" />
-      <JFXButton layoutX="537.0" layoutY="493.0" prefHeight="39.0" prefWidth="111.0" text="Remover " textFill="WHITE">
+      <Line fx:id="lineAddMovies" endX="6.5" layoutX="622.0" layoutY="457.0" startX="-51.5" stroke="#663cfd" />
+      <JFXButton fx:id="btnRemoveMovies" focusTraversable="false" layoutX="537.0" layoutY="493.0" prefHeight="39.0" prefWidth="111.0" text="Remover " textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -56,57 +56,63 @@
             <Insets right="-34.0" />
          </padding>
       </JFXButton>
-      <Line endX="21.75" layoutX="621.0" layoutY="522.0" startX="-51.5" stroke="#663cfd" />
-      <ImageView layoutX="525.0" layoutY="313.0">
-         <image>
-            <Image url="@../resources/catalog_icon.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="540.0" layoutY="377.0">
+      <Line fx:id="lineRemoveMovies" endX="21.75" layoutX="621.0" layoutY="522.0" startX="-51.5" stroke="#663cfd" />
+      <ImageView fx:id="imgAddMovies" fitHeight="18.0" fitWidth="18.0" layoutX="540.0" layoutY="377.0">
          <image>
             <Image url="@../resources/plus_icon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="542.0" layoutY="312.0">
+      <ImageView fx:id="imgListMovies" fitHeight="18.0" fitWidth="18.0" layoutX="542.0" layoutY="312.0">
          <image>
             <Image url="@../resources/fi-rr-menu-burger%201.png" />
          </image>
       </ImageView>
-      <ImageView layoutX="540.0" layoutY="439.0">
+      <ImageView fx:id="imgUpdateMovies" layoutX="540.0" layoutY="439.0">
          <image>
             <Image url="@../resources/refresh_icon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="541.0" layoutY="505.0">
+      <ImageView fx:id="imgRemoveMovies" fitHeight="18.0" fitWidth="18.0" layoutX="541.0" layoutY="505.0">
          <image>
             <Image url="@../resources/remove_icon.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="41.0" layoutY="645.0" prefHeight="34.0" prefWidth="81.0" style="-fx-background-color: #663CFD;" text="Sair" textFill="WHITE">
+      <JFXButton fx:id="btnQuit" focusTraversable="false" layoutX="1190.0" layoutY="665.0" onAction="#backLogin" prefHeight="28.0" prefWidth="63.0" style="-fx-background-color: #663CFD;" text="Sair" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="12.0" />
          </font>
          <padding>
             <Insets bottom="2.0" left="23.0" />
          </padding>
       </JFXButton>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="50.0" layoutY="653.0">
+      <ImageView fx:id="imgQuit" fitHeight="18.0" fitWidth="18.0" layoutX="1196.0" layoutY="670.0">
          <image>
             <Image url="@../resources/x_icon.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="1088.0" layoutY="645.0" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #663CFD;" text="Alterar dados" textFill="WHITE">
+      <JFXButton fx:id="btnChangeDatas" alignment="CENTER" focusTraversable="false" layoutX="37.0" layoutY="20.0" prefHeight="28.0" prefWidth="114.0" style="-fx-background-color: #663CFD;" text="Alterar Perfil" textAlignment="RIGHT" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="12.0" />
          </font>
          <padding>
             <Insets bottom="2.0" left="23.0" />
          </padding>
       </JFXButton>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="1095.0" layoutY="653.0">
+      <ImageView fx:id="imgChangeDatas" fitHeight="18.0" fitWidth="18.0" layoutX="42.0" layoutY="25.0">
          <image>
             <Image url="@../resources/profile_icon.png" />
          </image>
       </ImageView>
+      <Line fx:id="lineListMovies1" endX="-100.0" endY="71.0" layoutX="230.0" layoutY="623.0" startX="-100.0" stroke="#4717f6" strokeWidth="5.0" />
+      <ImageView fitHeight="48.0" fitWidth="57.0" layoutX="64.0" layoutY="635.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resources/logo.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="157.0" layoutY="629.0" text="Ocarina" textFill="WHITE">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
