--- a/src/view/list/list.fxml
+++ b/src/view/list/list.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,50 +22,6 @@
             </Label>
          </children>
       </Pane>
-      <VBox layoutY="151.0" prefHeight="573.0" prefWidth="242.0" style="-fx-background-color: #4717F6;">
-         <children>
-            <JFXButton fx:id="btnAllMovies" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Todos Filmes" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnTerror" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Terror" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnAction" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Ação" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnAdventure" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Aventura" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnComedy" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Comédia" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnThriller" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Suspense" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnFavorites" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Favoritos" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnBestRatings" alignment="BASELINE_LEFT" focusTraversable="false" prefHeight="74.0" prefWidth="242.0" text="Melhores Notas" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-         </children>
-      </VBox>
       <Pane layoutX="242.0" prefHeight="86.0" prefWidth="1039.0" style="-fx-background-color: #663CFD;">
          <children>
             <Label fx:id="lbUsername" layoutX="871.0" layoutY="26.0" textFill="WHITE">
@@ -72,7 +29,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtfSearch" focusColor="WHITE" focusTraversable="false" layoutX="90.0" layoutY="20.0" prefHeight="32.0" prefWidth="242.0" promptText="Pesquisa" unFocusColor="#663cfd">
+            <JFXTextField fx:id="txtfSearch" focusColor="WHITE" layoutX="90.0" layoutY="20.0" prefHeight="32.0" prefWidth="242.0" promptText="Pesquisa" unFocusColor="#663cfd">
                <font>
                   <Font size="24.0" />
                </font>
@@ -84,6 +41,54 @@
             </ImageView>
          </children>
       </Pane>
-      <Pane fx:id="pnScreen" layoutX="242.0" layoutY="86.0" prefHeight="638.0" prefWidth="1039.0" style="-fx-background-color: #0A002C;" />
+      <VBox layoutY="151.0" prefHeight="573.0" prefWidth="242.0" style="-fx-background-color: #4717F6;">
+         <children>
+            <JFXButton fx:id="btnAllMovies" alignment="BASELINE_LEFT" onAction="#allMovies" prefHeight="74.0" prefWidth="242.0" text="Todos Filmes" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnTerror" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Terror" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnAction" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Ação" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnAdventure" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Aventura" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnComedy" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Comédia" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnThriller" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Suspense" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnFavorites" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Favoritos" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnBestRatings" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Melhores Notas" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </VBox>
+      <ScrollPane focusTraversable="false" hbarPolicy="NEVER" hmax="0.0" layoutX="242.0" layoutY="86.0" pannable="true" prefHeight="638.0" prefWidth="1039.0">
+         <content>
+            <AnchorPane fx:id="pnScreen" prefHeight="726.0" prefWidth="1037.0" style="-fx-background-color: #0A002C;" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
