--- a/src/view/list/allmovies.fxml
+++ b/src/view/list/allmovies.fxml
@@ -2,10 +2,30 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.list.All">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="726.0" prefWidth="1037.0" stylesheets="@List.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
-      <Label layoutX="286.0" layoutY="192.0" text="Label" />
+      <Pane layoutX="96.0" layoutY="155.0" prefHeight="238.0" prefWidth="185.0" style="-fx-background-color: black;">
+         <children>
+            <Pane layoutX="61.0" layoutY="-16.0" prefHeight="32.0" prefWidth="63.0" style="-fx-background-color: yellow; -fx-border-radius: 20; -fx-background-radius: 20;" />
+         </children>
+      </Pane>
+      <Label layoutX="96.0" layoutY="70.0" text="Novos Filmes">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="lbTitle" layoutX="96.0" layoutY="419.0" text="Title">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="lbGender" layoutX="96.0" layoutY="454.0" text="Gender" textFill="#4d4d4d">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
