--- a/src/view/adm/adm.fxml
+++ b/src/view/adm/adm.fxml
@@ -30,7 +30,7 @@
          </font>
       </JFXButton>
       <Line fx:id="lineListMovies" endX="72.25" layoutX="656.0" layoutY="332.0" startX="-86.0" stroke="#663cfd" />
-      <JFXButton fx:id="btnAddMovies" focusTraversable="false" layoutX="538.0" layoutY="366.0" prefHeight="39.0" prefWidth="117.0" text="Adicionar" textFill="WHITE">
+      <JFXButton fx:id="btnAddMovies" focusTraversable="false" layoutX="538.0" layoutY="366.0" onAction="#loadImg" prefHeight="39.0" prefWidth="117.0" text="Adicionar" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
