--- a/src/view/list/list.fxml
+++ b/src/view/list/list.fxml
@@ -53,32 +53,32 @@
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btnAction" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Ação" textFill="WHITE">
+            <JFXButton fx:id="btnActionAdventure" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Ação e Aventura" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btnAdventure" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Aventura" textFill="WHITE">
+            <JFXButton fx:id="btnDrama" alignment="BASELINE_LEFT" onAction="#dramaMovies" prefHeight="74.0" prefWidth="242.0" text="Drama" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btnComedy" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Comédia" textFill="WHITE">
+            <JFXButton fx:id="btnComedy" alignment="BASELINE_LEFT" onAction="#comedyMovies" prefHeight="74.0" prefWidth="242.0" text="Comédia" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btnThriller" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Suspense" textFill="WHITE">
+            <JFXButton fx:id="btnFantasy" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Fantasia" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnScienceFiction" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Ficção Científica" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
             <JFXButton fx:id="btnFavorites" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Favoritos" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="btnBestRatings" alignment="BASELINE_LEFT" prefHeight="74.0" prefWidth="242.0" text="Melhores Notas" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
