--- a/src/view/home/home.fxml
+++ b/src/view/home/home.fxml
@@ -38,7 +38,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnChangeUser" alignment="CENTER_RIGHT" layoutX="37.0" layoutY="20.0" prefHeight="28.0" prefWidth="114.0" text="Alterar Dados" textAlignment="RIGHT" textFill="WHITE">
+      <JFXButton fx:id="btnChangeUser" alignment="CENTER_RIGHT" layoutX="37.0" layoutY="20.0" onAction="#changeData" prefHeight="28.0" prefWidth="114.0" text="Alterar Dados" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
